Fixed navigation to style correctly on mobile

--- a/assets/sass/modules/_header.scss
+++ b/assets/sass/modules/_header.scss
@@ -49,3 +49,11 @@
 		text-align: left;
 	}
 }
+
+.custom-logo {
+	margin: 0 auto;
+
+	@include susy-media($tablet-landscape) {
+		margin: 0;
+	}
+}
